include_directories(./)
#include_directories(./common/include)
#include_directories(./image/include)
#include_directories(./filter/include)
#add_subdirectory(caliper)
#add_subdirectory(common)
add_subdirectory(core)
#add_subdirectory(image)
#add_subdirectory(lines_detection)
add_subdirectory(filter)
add_subdirectory(effect_buildin_task)
